--- a/changing-themes-with-context/src/index.css
+++ b/changing-themes-with-context/src/index.css
@@ -15,38 +15,45 @@ body {
 }
 
 .blue {
+  z-index: 1;
   display: grid;
   text-align-last: center;  
   width: 10px;
   height: 10px;
-  box-shadow: 3px -4px 3px 1px rgb(126, 68, 54);
+  box-shadow: 0px 0px 10px 1px rgb(153, 72, 19);
   background-color: rgb(51, 139, 120);
 }
 
 .brown {
+  z-index: 2;
   position: relative;
-  z-index: 1;
   background-color: brown;
-  top: 8px;
+  top: 10px;
+  left: 4px;
 }
 
 .A {
-  z-index: 2;
-  border-top-left-radius: 10px; 
+  border-top-left-radius: 9px; 
 }
 
 .B {
-  z-index: 2;
-  border-top-right-radius: 10px
+  border-top-right-radius: 6px;
 }
 .C {
+  border-bottom-right-radius: 6px;
 
 }
 
 .tan {
-  z-index: 1;
+  z-index: 0;
   background-color: tan;
 }
+
+.tanB {
+  background-color: tan;
+  border-bottom-right-radius: 10px;
+}
+
 .black {
   background-color: black;
 }
