--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -3,21 +3,69 @@
   box-sizing: border-box;
 }
 
-.siteWrap {
-  display: flex;
-  height: 100vh;
+html body {
+  height: 100%;
+  width:100%;
+}
+
+body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 0;
   width: 100vw;
-  flex-direction: column;
+  height: 100vh;
+  background-color: whitesmoke;
 }
 
-.navBar {
-
-  display: flex;
+.siteWrap {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(252, 252, 248, 0.2);
+  text-align: center;
 }
 
-.navTabs {
-  margin: auto;
+.navTab {
   display: flex;
+  justify-content: center;
+  align-items: stretch;
+  width: 100%;
+  height: 93px;
+  grid-area: n;
+  background-color: rgba(158, 158, 158, 0.507);
+}
+
+.navButtons {
+  border-color: rgba(6, 122, 255);
+  font-size: 22px;
+  width: 25%;
+  padding: 2px;
+  margin: 12px;
+  transition: background-color .25s ease-in-out, box-shadow .25s ease-in-out;
+  background-color: rgba(247, 147, 33, 0.856);
+  border-radius: 2px;
+}
+
+.navButtons:hover {
+  cursor: pointer;
+  box-shadow: 6px 10px 7px -5px black;  
+  background-color: rgb(255, 139, 6);
+}
+
+.headerClass {
+  background-color: rgb(179, 179, 179);
+  height: 30%;
+  border-color: rgb(255, 139, 6);
+}
+
+.titleHeader {
+  display: inline-flex;
+  margin-bottom: 5%;
+  font-size: 44px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-shadow: 0px 0px 5px rgba(6, 122, 255);
+}
+
+.introPar {
+  margin: 5%;
 }
 
 .dataDiv {
@@ -26,6 +74,5 @@
 }
 
 .footerDiv {
-  flex-direction: column;
   display: flex;
 }
