--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -34,11 +34,11 @@ body {
 }
 
 .navButtons {
-  border-color: rgba(6, 122, 255);
   font-size: 22px;
   width: 25%;
   padding: 2px;
   margin: 12px;
+  border-color: rgba(6, 122, 255);
   transition: background-color .25s ease-in-out, box-shadow .25s ease-in-out;
   background-color: rgba(247, 147, 33, 0.856);
   border-radius: 2px;
@@ -58,6 +58,7 @@ body {
 
 .titleHeader {
   display: inline-flex;
+  margin-top: 2%;
   margin-bottom: 5%;
   font-size: 44px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -66,6 +67,16 @@ body {
 
 .introPar {
   margin: 5%;
+  text-shadow: 0px 0px .05px rgba(6, 122, 255);
+}
+
+.welcomeHeader {
+  text-shadow: 0px 0px 1px rgba(255, 139, 6);
+}
+
+.introClosingHeader {
+  margin-bottom: 2%;
+  text-shadow: 0px 0px 1px rgba(255, 139, 6);
 }
 
 .dataDiv {
