--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -5,7 +5,7 @@
 
 html body {
   height: 100%;
-  width:100%;
+  width: 100%;
 }
 
 body {
@@ -46,7 +46,7 @@ body {
 
 .navButtons:hover {
   cursor: pointer;
-  box-shadow: 6px 10px 7px -5px black;  
+  box-shadow: 6px 10px 7px -5px black;
   background-color: rgb(255, 139, 6);
 }
 
@@ -62,28 +62,33 @@ body {
   margin-bottom: 5%;
   font-size: 44px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  text-shadow: 0px 0px 5px rgba(6, 122, 255);
+  text-shadow: 0px 0px 2px rgba(6, 122, 255);
 }
 
 .introPar {
   margin: 5%;
-  text-shadow: 0px 0px .05px rgba(6, 122, 255);
+  text-shadow: 0px 0px .03px rgba(6, 122, 255);
 }
 
 .welcomeHeader {
-  text-shadow: 0px 0px 1px rgba(255, 139, 6);
+  text-shadow: 0px 0px .03px rgba(255, 139, 6);
 }
 
 .introClosingHeader {
   margin-bottom: 2%;
-  text-shadow: 0px 0px 1px rgba(255, 139, 6);
+  text-shadow: 0px 0px .03px rgba(255, 139, 6);
 }
 
 .dataDiv {
-  display: flex;
-  height: 60vh;
+  height: 5em;
+}
+
+.imgButton {
+  width: auto;
+  height: auto;
+  background-image: "/Users/student/dev/assignments/text-detect/tmp/handwritten-note.jpg";
 }
 
 .footerDiv {
-  display: flex;
+
 }
