--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -4,8 +4,8 @@
 }
 
 html body {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
@@ -17,10 +17,13 @@ body {
 }
 
 .siteWrap {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(252, 252, 248, 0.2);
   text-align: center;
+  /* background-image: url("https://images.pexels.com/photos/269923/pexels-photo-269923.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"); */
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .navTab {
@@ -51,8 +54,9 @@ body {
 }
 
 .headerClass {
-  background-color: rgb(179, 179, 179);
-  height: 30%;
+  background-size: contain;
+  background-position: center;
+  background-color: rgb(179, 179, 179, 0.707);
   border-color: rgb(255, 139, 6);
 }
 
@@ -87,8 +91,4 @@ body {
   width: auto;
   height: auto;
   background-image: "/Users/student/dev/assignments/text-detect/tmp/handwritten-note.jpg";
-}
-
-.footerDiv {
-
 }
